--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,7 +4,10 @@
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
-    <p class="secret-text">Jack Bauer is my hero.</p>
+    <p class="secret-text">I Ate my brother's food yesterday.</p>
+    <% foundSecrets.forEach(function(secret){ %>
+      <p class="secret-text"><%=secret.text%></p>
+    <% }) %>
     <hr>
     
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
